@@ -14,16 +14,16 @@ module Gem
         remove_option('--name-matches')
       end
 
-      def defaults_str
+      def arguments # :nodoc:
+        "STRING        fragment of gem name to search for"
+      end
+
+      def defaults_str # :nodoc:
         "--local --no-details"
       end
 
-      def usage
+      def usage # :nodoc:
         "#{program_name} [STRING]"
-      end
-
-      def arguments
-        "STRING   fragment of gem name to look for"
       end
 
       def execute
